syntax = "proto3";

package gameplayservice;

service GameplayService {
  rpc CreareOrJoinGame (CreareOrJoinGameRequest) returns (CreareOrJoinGameResponse);
}

//-----------------------------

message CreareOrJoinGameRequest {
}

message CreareOrJoinGameResponse {
}

//-----------------------------